[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapse-cli"
version = "0.1.0"
description = "AI-driven C++ project scaffolding and CMake automation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "langchain-google-genai",
    "python-dotenv",
]

[project.scripts]
synapse = "synapse:main"